--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <div class="container" id="app">
      <div>
         <div class="col-2">
-         <img src="/imges/a.jfif" alt="me">
+         <img src="./imges/a.jfif" alt="me">
         <h4>انت</h4>
         <br>
         <div id="blockGame">
@@ -39,14 +39,14 @@
       <div class="col-8 border">
         <div id="result" >
           <div class="flex imgs" >
-          <div><img src="/imges/Rock.jfif" id="you"></div>
-          <div><img src="/imges/Scissors.jpg" id="abd"></div>
+          <div><img src="./imges/Rock.jfif" id="you"></div>
+          <div><img src="./imges/Scissors.jpg" id="abd"></div>
           </div>
       </div>
 
       </div>
       <div class="col-2">
-        <img src="/imges/me.jpg" alt="me">
+        <img src="./imges/me.jpg" alt="me">
         <h4>Abdallah Abu Zaid</h4>
       </div>
      </div>
