--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
        
       </div>
-      <div class="col-8 border">
+      <div class="col-8 ">
         <div id="result" >
           <div class="flex imgs" >
           <div><img src="./imges/Rock.jfif" id="you"></div>
